# cpplox

./: .clang-format  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
include/cpplox/: chunk.hpp
include/cpplox/bytecode/: Bytecode.hpp  Chunk.hpp  Disassembler.hpp  OpCode.hpp
include/cpplox/compiler/: Bytecode.hpp  Chunk.hpp  Compiler.hpp  Disassembler.hpp  OpCode.hpp  Scanner.hpp  Token.hpp  VM.hpp
include/cpplox/core/: Algorithm.hpp  Chunk.hpp  Compiler.hpp  Format.hpp  Scanner.hpp  String.hpp  StringFormatter.hpp  VM.hpp  Value.hpp  ValueFormatter.hpp  ValueMap.hpp  ValueStack.hpp  Vector.hpp  VectorImpl.hpp
include/cpplox/debug/: Disassembler.hpp  disassembler.hpp
include/cpplox/diagnostics/: CMakeLists.txt  Diagnostic.hpp  DiagnosticConsumer.hpp  DiagnosticEngine.hpp
include/cpplox/log/: CMakeLists.txt  Log.hpp
include/cpplox/runtime/: BoundMethod.hpp  Class.hpp  Closure.hpp  Function.hpp  GC.hpp  GCVisitor.hpp  Instance.hpp  Object.hpp  Upvalue.hpp
include/cpplox/vm/: VM.hpp
interpreter/: CMakeLists.txt  main.cpp
src/bytecode/: Bytecode.cpp  CMakeLists.txt  Disassembler.cpp
src/compiler/: Bytecode.cpp  CMakeLists.txt  Compiler.cpp  Disassembler.cpp  Scanner.cpp  VM.cpp
src/core/: CMakeLists.txt  Compiler.cpp  Scanner.cpp  String.cpp  VM.cpp  Value.cpp  ValueMap.cpp  ValueStack.cpp
src/debug/: CMakeLists.txt  Disassembler.cpp  disassembler.cpp
src/runtime/: BoundMethod.cpp  CMakeLists.txt  Class.cpp  Closure.cpp  Function.cpp  GC.cpp  Instance.cpp  Upvalue.cpp
src/vm/: CMakeLists.txt  VM.cpp
tests/: CMakeLists.txt
tests/bytecode/: Bytecode.cpp
tests/compiler/: Bytecode.cpp  CMakeLists.txt  Scanner.cpp
tests/core/: Algorithm.cpp  CMakeLists.txt  Scanner.cpp  String.cpp  Value.cpp  ValueMap.cpp  ValueStack.cpp  Vector.cpp
tests/e2e/: test_runner.py
tests/e2e/arithmetic/: add.lox  comparison.lox  divide.lox  multiply.lox  negate.lox  subtract.lox
tests/e2e/classes/: fields.lox  init.lox  methods.lox  this.lox
tests/e2e/closures/: basic.lox  counter.lox
tests/e2e/control_flow/: for.lox  if.lox  logical.lox  while.lox
tests/e2e/errors/: compile_duplicate_var.lox  compile_syntax.lox  runtime_operand.lox  runtime_type_error.lox  runtime_undefined_var.lox
tests/e2e/functions/: basic.lox  recursion.lox
tests/e2e/inheritance/: basic.lox  super.lox
tests/e2e/strings/: concat.lox
tests/e2e/variables/: assign.lox  declare.lox  global.lox  scope.lox
